[package]
name = "id_graph_sccs"
version = "0.1.0"
edition = "2021"

authors = ["William Brandon"]
description = "Find the strongly-connected components of a graph with nodes labeled by integer ids"
keywords = ["graph", "strongly-connected", "SCC", "toposort", "Tarjan's"]
categories = ["algorithms", "data-structures"]
license = "MIT"

[dependencies]
id_collections = "1.0"
num-traits = "0.2"
